package aula05_interface;

public interface Pagamento {
    double calcularSalario();
}
